# roctopai

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.claude/: settings.json
.github/workflows/: release.yml
src/: app.rs  config.rs  deps.rs  git.rs  github.rs  hooks.rs  local.rs  main.rs  models.rs  session.rs  ui.rs
