[package]
name = "octopai"
version = "0.3.0"
edition = "2021"
description = "AI-powered CLI assistant for managing multiple projects"
homepage = "https://github.com/dgriffith0/octopai"
repository = "https://github.com/dgriffith0/octopai"
license = "MIT"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
